refactor: :recycle: Changed all project file names

--- a/01-PetShop/src/views/partials/header.mustache
+++ b/01-PetShop/src/views/partials/header.mustache
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PetDevShop - O petshop do dev</title>
-    <link rel="stylesheet" href="/css/style.css" />
+    <title>PetDev Shop</title>
+    <link rel="stylesheet" href="/css/global.css" />
     <link rel="icon" type="image/png" href="/images/favicon.jpg" />
 </head>
 <body>
 <header>
     <div class="container">
-        <a href="./">PetDevShop</a>
+        <a href="./">PetDev Shop</a>
         <form method="GET" action="">
             <input type="search" placeholder="Pesquise por raça" />
         </form>
