feat: :sparkles: Added structure display Dog
- Updated names variable
- CleanCode pets-models.ts
- Ping/Pong application test deleted

--- a/01-PetShop/src/views/pages/home.mustache
+++ b/01-PetShop/src/views/pages/home.mustache
@@ -1,5 +1,5 @@
 {{>partials/header}}
-  {{#list}}
+  {{#listAll}}
     <div class="item">
         <img src='/images/{{image}}' class="item--image" />
         <div class="item--name">{{name}}</div>
@@ -7,5 +7,5 @@
         <div class="item--color">Cor: {{color}}</div>
         <div class="item--genre">Gênero: {{sex}}</div>
     </div>
-  {{/list}}
+  {{/listAll}}
 {{>partials/footer}}
