--- a/01-PetShop/src/views/pages/dog.mustache
+++ b/01-PetShop/src/views/pages/dog.mustache
@@ -1,3 +1,11 @@
 {{>partials/header}}
-  Cachorro
+  {{#listDog}}
+    <div class="item">
+        <img src='/images/{{image}}' class="item--image" />
+        <div class="item--name">{{name}}</div>
+        <div class="item--color">Tipo: {{type}}</div>
+        <div class="item--color">Cor: {{color}}</div>
+        <div class="item--genre">Gênero: {{sex}}</div>
+    </div>
+  {{/listDog}}
 {{>partials/footer}}
