--- a/01-PetShop/src/views/partials/header.mustache
+++ b/01-PetShop/src/views/partials/header.mustache
@@ -10,18 +10,19 @@
 <body>
 <header>
     <div class="container">
-        <a href="./">PetDev Shop</a>
-        <form method="GET" action="">
-            <input type="search" placeholder="Pesquise por raça" />
-        </form>
+        <p>PetDev Shop</p>
+    <form method="GET" action="/search">
+        <input type="search" name="q" placeholder="Pesquise por raça ou nome" value="{{ query }}" required/>
+        <button type="submit">Buscar</button>
+    </form>
     </div>
 </header>
 <nav>
     <ul>
-        <li class="active"><a href="./">Todos</a></li>
-        <li class=""><a href="/dog">Cachorros</a></li>
-        <li class=""><a href="/cat">Gatos</a></li>
-        <li class=""><a href="/fish">Peixes</a></li>
+        <li><a href="./">Todos</a></li>
+        <li><a href="/dog">Cachorros</a></li>
+        <li><a href="/cat">Gatos</a></li>
+        <li><a href="/fish">Peixes</a></li>
     </ul>
 </nav>
 <section class="banner" style="background-image: url({{banner.url}})"> {{banner.title}} </section>
